@@ -1,2 +1,3 @@
-.build
-Dist-Zilla-Plugin-if*
+/.build
+/Dist-Zilla-Plugin-if-*
+/tmp/
