@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002002
+ [Added / configure requires]
+ - perl 5.010
+
+ [Added / test requires]
+ - perl 5.010
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.002001 2014-08-29T09:56:30Z
  [Changed / test requires]
@@ -13,4 +21,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Removed / runtime requires]
  - Dist::Zilla::Role::PrereqSource
  - MooX::Lsub
-
